--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "findcountry",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://byteme6.github.io/pictureFind",
+  "homepage": "https://ByteMe6.github.io/pictureFind",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
