--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ByteMe6.github.io/pictureFind",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /pictureFind/"
   },
   "repository": {
     "type": "git",
